src/test/compile-fail/reserved_free.mmtn
// { "compile_status": "fail" }

fn free() -> u64 {
    0
}

fn main() -> u64 {
    free()
}
